# OptimumPrime

./: LICENSE  README.md
.github/workflows/: docker-publish.yml
Android/OptimusSpectrum/: Readme.md  settings.gradle.kts
Android/OptimusSpectrum/app/: build.gradle.kts
Android/OptimusSpectrum/app/src/main/: AndroidManifest.xml
Android/OptimusSpectrum/gradle/wrapper/: gradle-wrapper.properties
Arduino/: Readme.md
Arduino/Fulfillment_Station/: Fulfillment_Station.ino  ReadMe.adoc
Arduino/MobileRobot/: Driver.ino  ReadMe.adoc
GyroPalm/: BLE_Keyboard
Jetson/AprilTag/: Dockerfile  ros_entrypoint.sh
Jetson/AprilTag/apriltag_ros2/: package.xml  setup.cfg  setup.py
Jetson/AprilTag/apriltag_ros2/apriltag_ros2/: apriltag.py
Jetson/Mapping_Docker/: Dockerfile  ros-entrypoint.sh
Jetson/Mapping_Docker/push_mapping/: package.xml
Jetson/Mapping_Docker/push_mapping/description/: optimum_prime.xacro  push_mapping.xacro
Jetson/Mapping_Docker/push_mapping/launch/: push_mapping.launch.py
Jetson/Mapping_Docker/push_mapping/push_mapping/.ipynb_checkpoints/: JetsonBringup-checkpoint.py
Jetson/push_mapping/: setup.cfg  setup.py
Jetson/push_mapping/launch/: push_mapping.launch.py  rtab.launch.py
Jetson/push_mapping/push_mapping/: JetsonBringup.py  JetsonTest.py  import torch.py
Jetson/push_mapping/push_mapping/.ipynb_checkpoints/: JetsonBringup-checkpoint.py
Jetson/push_mapping/rviz/: push_mapping.rviz
package_loader/: package.xml  setup.cfg  setup.py
package_loader/package_loader/: blue.txt  fulfillment.py  green.txt  newfile.py  red.txt
(+23 files in other folders)
