<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>push_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="team13@todo.todo">team13</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>nav2_bringup</depend>
  <depend>ros2launch</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>rtabmap_odom</depend>
  <depend>xacro</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
